--- a/apps/SageAccountWeb/src/style/_AccountSetting.scss
+++ b/apps/SageAccountWeb/src/style/_AccountSetting.scss
@@ -24,10 +24,12 @@
     li {
       background-color: #fff;
       font-size: 14px;
-      border-bottom: 1px solid #eaecee;
-      padding: 11px 20px;
+      padding: 12px 30px;
       &:hover {
         font-weight: bold;
+      }
+      &:not(:last-child) {
+        border-bottom: 1px solid #eaecee;
       }
     }
   }
