--- a/packages/synapse-react-client/src/lib/style/components/_access-requirement-list.scss
+++ b/packages/synapse-react-client/src/lib/style/components/_access-requirement-list.scss
@@ -1,14 +1,11 @@
 @use '../abstracts/variables' as SRC;
+@use 'sass:color';
+@use 'sass:map';
 
 .AccessRequirementList {
   color: SRC.$gray-regular;
 
   &__instruction {
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding-left: 15px;
-    padding-bottom: 20px;
   }
 
   &__title {
@@ -22,9 +19,24 @@
   }
 
   .requirement-container {
+    position: relative;
     display: flex;
     align-items: center;
     margin: 1rem 0 4rem;
+    border-left: 1px solid map.get(SRC.$colors, 'gray-400');
+    border-image: linear-gradient(
+      to bottom,
+      color.change(map.get(SRC.$colors, 'gray-400'), $alpha: 0) 40px,
+      color.change(map.get(SRC.$colors, 'gray-400'), $alpha: 1) 40px,
+      color.change(map.get(SRC.$colors, 'gray-400'), $alpha: 1)
+        calc(100% - 20px),
+      color.change(map.get(SRC.$colors, 'gray-400'), $alpha: 0)
+        calc(100% - 20px)
+    );
+    border-image-slice: 1;
+    margin-left: 15px;
+    padding-left: 35px;
+    padding-bottom: -20px;
   }
 
   &__register-text-link {
@@ -35,17 +47,6 @@
     padding-left: 25px;
   }
 
-  &__signin {
-    button {
-      padding-left: 0px;
-    }
-  }
-
-  .button-container {
-    &.hide {
-      visibility: hidden;
-    }
-  }
   .sign-in-btn_access-requirement {
     margin-left: -7px;
   }
@@ -59,16 +60,10 @@
   }
 
   .accept-button-container {
-    align-content: center;
-    justify-content: center;
-    display: inline;
-    margin-right: 2rem;
-  }
-
-  .accept-button {
-    background-color: SRC.$primary-action-color;
-    padding: 10px 70px 10px 70px;
-    color: white;
+    //align-content: center;
+    //justify-content: center;
+    //display: inline;
+    //margin-right: 2rem;
   }
 
   .not-accept-button-container {
@@ -85,29 +80,6 @@
     margin-left: 10px;
     background-color: SRC.$primary-action-color;
     color: white;
-  }
-  .check-mark-container {
-    &.orange {
-      background-color: orange;
-    }
-    &.green {
-      background-color: rgb(39, 167, 69);
-    }
-    color: white;
-    border-radius: 50%;
-    margin-right: 15px;
-    margin-left: 20px;
-    padding: 15px;
-    height: 15px;
-    width: 15px;
-    display: flex;
-    align-self: baseline;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-  }
-  .AcceptRequirementsMarkdown {
-    padding-right: 15px;
   }
 }
 
