--- a/packages/synapse-react-client/src/style/components/_query-wrapper-text-input.scss
+++ b/packages/synapse-react-client/src/style/components/_query-wrapper-text-input.scss
@@ -1,7 +1,6 @@
 @use '../abstracts/variables' as SRC;
 
-.QueryWrapperSearchInput,
-.QueryWrapperSqlEditorInput {
+.QueryWrapperSearchInput {
   &__helppopoverwrapper {
     display: grid;
     grid-template-columns: auto 25px;
