--- a/apps/portals/src/_Core.scss
+++ b/apps/portals/src/_Core.scss
@@ -155,7 +155,6 @@ body {
   flex-basis: 50%;
   display: flex;
   flex-direction: row-reverse;
-  padding-right: 40px;
   @media screen and (max-width: 520px) {
     padding-right: 0px;
   }
@@ -166,20 +165,7 @@ body {
 #banner + .nav {
   top: Portal.$banner-height;
 }
-.explore-nav-container {
-  background-color: #f9f9f9;
-  border-bottom: 4px solid #dcdcdc;
-  padding: 30px 30px 0px 45px;
-  .title {
-    margin-top: 0px;
-  }
-}
-.explore-content {
-  margin-right: 65px;
-  @media screen and (max-width: 768px) {
-    margin-right: 18px;
-  }
-}
+
 .DownloadCartPage .pageHeader {
   padding: 30px 30px 0px 30px;
 }
@@ -206,23 +192,8 @@ body {
   &.explore-nav {
     margin-left: -24px;
     height: unset;
-    .TabScrollButton svg {
-      color: Portal.$secondary-action-color;
-      font-size: 26px;
-    }
     .nav-button {
       height: 75px;
-      .explore-nav-button-text {
-        color: #515359;
-        font-family: 'Lato', sans-serif;
-        font-weight: 700;
-        @extend %nav-button-text;
-      }
-      &.isSelected {
-        .explore-nav-button-text {
-          color: Portal.$dark-gray;
-        }
-      }
     }
   }
 }
@@ -238,7 +209,6 @@ body {
 }
 
 %nav-button-text {
-  text-transform: uppercase;
   font-weight: bold;
   font-size: 16px;
   text-align: center;
@@ -315,7 +285,6 @@ button.dropdown-toggle.nav-button:hover {
 #home-link {
   font-weight: bold;
   font-size: 25px;
-  margin-left: 15px;
 }
 
 %nav-dropdown-item {
@@ -713,14 +682,10 @@ div[data-id='tooltip'] {
 
 .QueryWrapperPlotNav {
   .FacetFilterControls {
-    padding: 10px 5px 10px 30px;
+    padding: 10px 0px;
   }
   .TopLevelControls {
-    margin: 10px 5px 10px 30px;
-  }
-  .TotalQueryResults.hasFilters > * {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 10px 0px 0px;
   }
 }
 
